simpleingress/curly-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: curly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curly
  template:
    metadata:
      labels:
        app: curly
    spec:
      containers:
        - image: "curly:v1"
          imagePullPolicy: Never
          name: curly
          ports:
            -
              containerPort: 8130
