simpleingress/moe-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: moe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moe
  template:
    metadata:
      labels:
        app: moe
    spec:
      containers:
        - image: "moe:v1"
          imagePullPolicy: Never
          name: moe
          ports:
            -
              containerPort: 8130
