simpleingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  backend:
    serviceName: test-ingress-node-1
    servicePort: 8080
  rules:
  - host:
    http:
      paths:
      - path: /moe
        backend:
          serviceName: moe
          servicePort: 8130
      - path: /gg2
        backend:
          serviceName: larry
          servicePort: 8080
      - path: /gg2
        backend:
          serviceName: test-ingress-node-2
          servicePort: 8080
